--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>About - My Cool Website</title>
-   </head>
-   <body>
-      <h1>About my website! 🎙</h1>
-      <p>Thanks for following this tutorial. 🙏</p>
-   </body>
+<head>
+<link rel="stylesheet" type="text/css" href="asciinema-player.css" />
+</head>
+<body>
+  <asciinema-player src="230215_163939_Wed.arec"></asciinema-player>
+  <script src="asciinema-player.js"></script>
+</body>
 </html>
