--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="asciinema-player.css" />
 </head>
 <body>
-  <asciinema-player src="230215_163939_Wed.arec"></asciinema-player>
+  Just Body 
   <script src="asciinema-player.js"></script>
 </body>
 </html>
